WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33400
Font fallback kills SVG kerning
https://bugs.webkit.org/show_bug.cgi?id=33400
Summary
Font fallback kills SVG kerning
Alexey Proskuryakov
Reported
2010-01-08 14:07:25 PST
Created
attachment 46159
[details]
test case Steps to reproduce: 1. Unpack the attached archive into LayoutTests directory. 2. run-webkit-tests --pixel --tolerance 0 kerning/2.svg 3. run-webkit-tests --pixel --tolerance 0 kerning Results: 2.svg fails, because kerning doesn't happen.
Attachments
test case
(3.39 KB, application/zip)
2010-01-08 14:07 PST
,
Alexey Proskuryakov
no flags
Details
Cache font attributes seperately for different typesetting features
(86.02 KB, patch)
2010-01-09 02:38 PST
,
mitz
zimmermann
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2010-01-09 00:48:31 PST
<
rdar://problem/7525778
>
mitz
Comment 2
2010-01-09 02:38:20 PST
Created
attachment 46203
[details]
Cache font attributes seperately for different typesetting features
Nikolas Zimmermann
Comment 3
2010-01-09 06:27:47 PST
Comment on
attachment 46203
[details]
Cache font attributes seperately for different typesetting features Looks very nice! I assume you've tried a pixel test run in svg/ as well, without problems? If yes, r=me.
David Kilzer (:ddkilzer)
Comment 4
2010-01-09 08:42:21 PST
Comment on
attachment 46203
[details]
Cache font attributes seperately for different typesetting features
> + Cache font attributes seperately for different typesetting features.
Typo: "separately"
David Kilzer (:ddkilzer)
Comment 5
2010-01-09 08:51:42 PST
Comment on
attachment 46203
[details]
Cache font attributes seperately for different typesetting features
> + (WebCore::SimpleFontData::getCFStringAttributes): Look up the attributes > + dictionary in the map and initialize in necessary.
Typo: "if necessary".
mitz
Comment 6
2010-01-09 10:47:35 PST
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/53039
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug