<rdar://problem/7525778> Font fallback kills SVG kerning https://bugs.webkit.org/show_bug.cgi?id=33400

Reviewed by Nikolas Zimmermann.

WebCore:

Test: platform/mac/fast/text/sticky-typesetting-features.html

Cache font attributes separately for different typesetting features.

* platform/graphics/SimpleFontData.h: Replaced single-element caches
with maps.
* platform/graphics/mac/ComplexTextControllerATSUI.cpp:
(WebCore::disableLigatures): Added an ATSUStyle parameter.
(WebCore::initializeATSUStyle): Look up the ATSUStyle in the map and
initialize if necessary. Return the ATSUStyle.
(WebCore::ComplexTextController::collectComplexTextRunsForCharactersATSUI):
Use the ATSUStyle returned from initializeATSUStyle().
* platform/graphics/mac/SimpleFontDataMac.mm:
(WebCore::SimpleFontData::platformInit):
(WebCore::SimpleFontData::platformDestroy): Destroy the ATSUStyles in the
map.
(WebCore::SimpleFontData::getCFStringAttributes): Look up the attributes
dictionary in the map and initialize if necessary.

LayoutTests:

* platform/mac/fast/text/sticky-typesetting-features-expected.checksum: Added.
* platform/mac/fast/text/sticky-typesetting-features-expected.png: Added.
* platform/mac/fast/text/sticky-typesetting-features-expected.txt: Added.
* platform/mac/fast/text/sticky-typesetting-features.html: Added.



Canonical link: https://commits.webkit.org/44447@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53039 268f45cc-cd09-0410-ab3c-d52691b4dbfc